<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sendcorrection"
        android:orderInCategory="101"
        android:title="@string/action_sendcorrection"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
