<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@drawable/appbar_always_elevated">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/bars_style_height"
                        android:layout_weight="1">

                        <View
                            android:id="@+id/color_view"
                            android:layout_width="24dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"/>
                    </FrameLayout>

                    <nl.brouwerijdemolen.borefts2013.gui.screens.BarView
                        android:id="@+id/abv_view"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/bars_style_height"
                        android:layout_weight="1"/>

                    <nl.brouwerijdemolen.borefts2013.gui.screens.BarView
                        android:id="@+id/bitterness_view"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/bars_style_height"
                        android:layout_weight="1"/>

                    <nl.brouwerijdemolen.borefts2013.gui.screens.BarView
                        android:id="@+id/sweetness_view"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/bars_style_height"
                        android:layout_weight="1"/>

                    <nl.brouwerijdemolen.borefts2013.gui.screens.BarView
                        android:id="@+id/acidity_view"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/bars_style_height"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll">

                    <TextView
                        android:id="@+id/color_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_color"
                        android:textSize="@dimen/text_small"/>

                    <TextView
                        android:id="@+id/abv_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_abv"
                        android:textSize="@dimen/text_small"/>

                    <TextView
                        android:id="@+id/bitterness_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_bitterness"
                        android:textSize="@dimen/text_small"/>

                    <TextView
                        android:id="@+id/sweetness_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_sweetness"
                        android:textSize="@dimen/text_small"/>

                    <TextView
                        android:id="@+id/acidity_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_acidity"
                        android:textSize="@dimen/text_small"/>
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="Barley Wine"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/beers_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/list_item_beer"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
